--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -9,7 +9,13 @@
         android:id="@+id/city"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Error"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:text="@string/error"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:background="@drawable/border"
+        android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
